Adding CNAME file for support of apex domain name miriamcox.net

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:           pretty
 
 # Setup
-title:               Slice of Pi
+title:               Pixel Pie
 tagline:             'Food for thought.'
 description:         'This corner of the cloud belongs to Miriam Cox, a cybersecurity amateur, pop fantasy nerd, and aspiring foodie.'
 url:                 http://miriamcox.net
